<resources>
    <string name="app_name">PUMA IS</string>
    <string name="title_home">Home</string>
    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="Options">Options</string>
    <string name="structure">Structure</string>
    <string name="aspiration">Aspiration</string>
    <string name="motivational">Motivational</string>
    <string name="appreciation">Appreciation</string>
    <string name="information">Information</string>
    <string name="addInformation">Add Information</string>
    <string name="description">Description</string>
    <string name="tata"><u>Guest</u></string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>